--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -8,21 +8,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Running Yarn prettier
-        run: yarn prettier --check "src/**/*.{ts,tsx}"
-
       - uses: aviate-labs/setup-dfx@v0.2.3
         with:
           dfx-version: 0.9.3
         env:
           DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
 
-      - name: MULTIPASS FRONTEND | install & tests
+      - name: NFID FRONTEND | install & format check
         run: |
           yarn
+          yarn prettier --check "src/**/*.{ts,tsx}"
           # yarn test
 
-      - name: MULTIPASS FRONTEND | deploy
+      - name: NFID FRONTEND | deploy
         run: |
           dfx identity use action
           dfx deploy --network dev  --no-wallet
