--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006 -s public",
     "test:dev": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles --watch",
+    "test:dev:silent": "yarn test:dev --silent=true",
     "test:e2e": "wdio run wdio.conf.ts",
     "test:e2e:debug": "cross-env DEBUG=true wdio run wdio.conf.ts --inspect",
     "test": "jest --passWithNoTests --config=jest.config.js --detectOpenHandles",
