feat([sc-2932]): integrate alternative origins interface (#666)
* feat([sc-2932]): define unit test for getAccounts util

* feat([sc-2932]): update naming

* test: rename method, add basic test case

* test([sc-2932]): add test for getNextPersonaId

* test: iterate persona util tests

* chore([sc-2932]): add notes

* feat([sc-2932]): added createAccount with derivationOrigin

* feat([sc-2932]): completed utils for personas

* feat([sc-2932]): update usePersona hook - createPersona derivationOrigins

* feat([sc-2932]): added selectAccounts to usePersona hook

* test([sc-2932]): update expectations

* feat([sc-2932]): update event interface

* feat([sc-2932]): added derivationOrigin priority to selectAccounts

* feat([sc-2932]): added demo test-app from dfinity

* feat([sc-2932]): configured demo-app

* feat([sc-29332]): configured validation of derivation origin

* test([sc-2932]): added failing test with fine tuned expectations

* test([sc-2932]): add fetch mock examples

* feat([sc-2932]): updated accounts in usePersona

* feat([sc-2932]): selectAccounts support test.com without https

* feat([sc-2932]): integrated derivationOrigin everywhere

* feat: added github workflow for test-app

* fix: fixed selectAccount

* feat: added derivationOrigin to /rdp/

* fix: usePersona accounts fix

* tests: add test canister to derivation origin testbed

* feat([sc-2932]): enabled sourcemap for dev

* feat: added derivationOrigin to multipass

* fix: used getScope in use-authorize-app

* fix: added derivationOrigin to QRCode

* fix: updated getScope in useAuthorizeApp

* fix: useMultipass fix

* fix([sc-2932]): crash on missing derivationOrigin

* fix([sc-2932]): conditional path for derivationOrigin

Co-authored-by: Чорній Павло <chorniy8pavlo@users.noreply.github.com>

* fix([sc-2932]): never prefix domain with protocol

* fix([sc-2932]): remove unused vars

* feat([sc-2932]): updated demo inside nfid-f

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/chai": "^4.3.1",
     "@types/google-one-tap": "^1.2.0",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "28.1.4",
     "@types/node": "17.0.29",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^18.0.1",
@@ -171,6 +171,7 @@
       "last 2 edge version"
     ]
   },
+  "cracoConfig": "craco.config.ts",
   "repository": "git@github.com:internet-identity-labs/nfid-frontend.git",
   "license": "MIT"
 }
