--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,12 +20,14 @@
     "paths": {
       "frontend/*": ["./src/*"]
     },
+    "sourceMap": true,
     "suppressExcessPropertyErrors": true,
     "types": [
       "node",
       "webdriverio/async",
       "@wdio/cucumber-framework",
-      "expect-webdriverio"
+      "expect-webdriverio",
+      "jest"
     ]
   },
   "include": ["src", "src/types/custom.d.ts", "test"],
