--- a/.github/workflows/internet-identity-test-app.yml
+++ b/.github/workflows/internet-identity-test-app.yml
@@ -10,7 +10,6 @@ env:
   CANISTER_NAME: 'test_app'
   CANISTER_ID: '3l2cj-5aaaa-aaaag-aaecq-cai'
   PROJECT_PATH: 'demos/test-app/'
-  DEBUG: 'true'
 
 jobs:
   Deploy:
@@ -40,11 +39,16 @@ jobs:
 
       - name: Checkout CI repo.
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
+          repository: internet-identity-labs/ci_libs
+          ref: main
+          path: ci_libs
 
       - name: Checkout target repo.
         uses: actions/checkout@v3
         with:
-          repository:  dfinity/internet-identity
+          repository: dfinity/internet-identity
           ref: main
           path: generic-project
 
@@ -63,30 +67,32 @@ jobs:
 
       - name: PRE-BUILD => Populate env vars.
         run: |
-          source .github/workflows/CI_LIBS.sh
+          source ./ci_libs/CI_LIBS.sh
           export HOME=/root
 
-          echo_debug "Installing jq"
+          ci_echo_debug "Installing jq" >&2
           apt-get update && apt-get install -y --no-install-recommends jq
 
           pushd ./generic-project/${PROJECT_PATH} || exit 1
 
-          echo_debug "Getting values from dfx.json"
+          ci_echo_debug "Getting values from dfx.json" >&2
           if ! canister_data=$(cat dfx.json | jq -er ".canisters.${CANISTER_NAME}"); then
-            echo_error "Can't found canister '${CANISTER_NAME}' data from dfx.json" >&2
+            ci_echo_error "Can't found canister '${CANISTER_NAME}' data from dfx.json" >&2
             exit 1
           fi
 
-          echo_debug "Setting destination canister id to '${CANISTER_ID}' in canister_ids.json" >&2
+          ci_echo_debug "Setting destination canister id to '${CANISTER_ID}' in canister_ids.json" >&2
           tmpfile="$(mktemp /tmp/XXXXXX.json)"
           if ! jq --arg canister_id "${CANISTER_ID}" '.test_app.ic = $canister_id' canister_ids.json > "${tmpfile}"; then
-            echo_error "Can't setting canister id '${CANISTER_ID}'" >&2
+            ci_echo_error "Can't setting canister id '${CANISTER_ID}'" >&2
             exit 1
           fi
 
           mv -f "${tmpfile}" canister_ids.json
-          echo_debug "canister_ids.json" >&2
-          cat canister_ids.json
+          ci_echo_debug "canister_ids.json" >&2
+          if [ "${CI_DEBUG}" == 'true' ]; then
+            cat canister_ids.json
+          fi
           
           CANISTER_DID="$(cat dfx.json | jq -er ".canisters.${CANISTER_NAME}.candid")"
           CANISTER_WASM="$(cat dfx.json | jq -er ".canisters.${CANISTER_NAME}.wasm")"
@@ -94,16 +100,16 @@ jobs:
           echo "CANISTER_DID=${CANISTER_DID}" >> $GITHUB_ENV
           echo "CANISTER_WASM=${CANISTER_WASM}" >> $GITHUB_ENV
           
-          echo_info "NETWORK_NAME=${NETWORK_NAME}" >&2
-          echo_info "CANISTER_NAME=${CANISTER_NAME}" >&2
-          echo_info "CANISTER_DID=${CANISTER_DID}" >&2
-          echo_info "CANISTER_WASM=${CANISTER_WASM}" >&2
+          ci_echo_info "NETWORK_NAME=${NETWORK_NAME}" >&2
+          ci_echo_info "CANISTER_NAME=${CANISTER_NAME}" >&2
+          ci_echo_info "CANISTER_DID=${CANISTER_DID}" >&2
+          ci_echo_info "CANISTER_WASM=${CANISTER_WASM}" >&2
         env:
           DEBIAN_FRONTEND: noninteractive
 
       - name: BUILD => Build the canister.
         run: |
-          source .github/workflows/CI_LIBS.sh
+          source ./ci_libs/CI_LIBS.sh
           export HOME=/root
 
           pushd ./generic-project/${PROJECT_PATH} || exit 1
@@ -113,30 +119,30 @@ jobs:
           ln -s /cargo_target target
 
           rm -rf .dfx;
-          echo_debug "dfx build --network '${NETWORK_NAME}' '${CANISTER_NAME}'" >&2
+          ci_echo_debug "dfx build --network '${NETWORK_NAME}' '${CANISTER_NAME}'" >&2
           dfx build --network "${NETWORK_NAME}" "${CANISTER_NAME}"
 
       - name: DEPLOY => Upgrade the canister.
         run: |
-          source .github/workflows/CI_LIBS.sh
+          source ./ci_libs/CI_LIBS.sh
           export HOME=/root
 
           pushd ./generic-project/${PROJECT_PATH} || exit 1
 
           dfx identity use gh_mp_admin
 
-          echo_debug "dfx canister --network '${NETWORK_NAME}' install --mode upgrade '${CANISTER_NAME}'" >&2
+          ci_echo_debug "dfx canister --network '${NETWORK_NAME}' install --mode upgrade '${CANISTER_NAME}'" >&2
           if ! result=$(dfx canister --network "${NETWORK_NAME}" install --mode upgrade "${CANISTER_NAME}"); then
-            echo_error "Upgrade failed ${result}" >&2
+            ci_echo_error "Upgrade failed ${result}" >&2
             exit 1
           fi
 
-          echo_debug "Command output was '${result}'" >&2
+          ci_echo_debug "Command output was '${result}'" >&2
 
-          # If hash the same - than fail deploy
+          # If hash the same - then fail deploy
           if echo "${result}" | grep -q 'Module hash [[:alnum:]]+ is already installed'; then
-            echo_error "${result}" >&2
+            ci_echo_error "${result}" >&2
             exit 1
           else
-            echo_success "Canister '${CANISTER_NAME}' was upgraded" >&2
+            ci_echo_success "Canister '${CANISTER_NAME}' was upgraded" >&2
           fi
