--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,45 @@ on:
       - main
 
 jobs:
+  check-secrets:
+    defaults:
+      run:
+        shell: bash
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout CI repo.
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
+          repository: internet-identity-labs/ci_libs
+          ref: main
+          path: ci_libs
+
+      - name: Check secrets
+        run: |
+          source ./ci_libs/CI_LIBS.sh
+          JSON='${{ toJSON(env) }}'
+          ci_check_secrets "${JSON}"
+        env:
+          IDENTITY_MANAGER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IDENTITY_MANAGER}}
+          PUB_SUB_CHANNEL_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_PUB_SUB_CHANNEL}}
+          VERIFIER_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_VERIFIER}}
+          INTERNET_IDENTITY_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_INTERNET_IDENTITY}}
+          IM_ADDITION_CANISTER_ID_PRODUCTION: ${{secrets.PROD_CANISTER_ID_IM_ADDITION}}
+          AWS_VERIFY_PHONENUMBER: ${{secrets.PROD_AWS_VERIFY_PHONENUMBER}}
+          AWS_SIGNIN_GOOGLE: ${{secrets.PROD_AWS_SIGNIN_GOOGLE}}
+          GOOGLE_CLIENT_ID: ${{secrets.PROD_GOOGLE_CLIENT_ID}}
+          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
+          SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
+
   deploy:
+    needs: check-secrets
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
