chore: add xstate extention

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -10,6 +10,7 @@
     "mhutchie.git-graph",
     "ms-vsliveshare.vsliveshare",
     "rust-lang.rust",
+    "statelyai.stately-vscode",
     "stevejpurves.cucumber",
     "vadimcn.vscode-lldb"
   ]
