--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "@headlessui/react": "1.5.0",
     "@internet-identity-labs/nfid-sdk-react": "0.0.1-alpha.18",
     "@nfid/credentials": "^0.0.10",
-    "@sentry/react": "^6.19.7",
-    "@sentry/tracing": "^6.19.7",
+    "@sentry/react": "7.8.0",
+    "@sentry/tracing": "7.8.0",
     "@tailwindcss/forms": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -163,7 +163,6 @@
       "last 2 edge version"
     ]
   },
-  "cracoConfig": "craco.config.ts",
   "repository": "git@github.com:internet-identity-labs/nfid-frontend.git",
   "license": "MIT"
 }
