--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "jest-environment-jsdom": "^27.1.5",
     "jotai": "1.6.4",
     "process": "0.11.10",
-    "react": "18.0.0",
+    "react": "^18.2.0",
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "18.0.0",
     "react-helmet-async": "1.3.0",
@@ -98,7 +98,7 @@
     "@types/google-one-tap": "^1.2.0",
     "@types/jest": "^27.1.5",
     "@types/node": "17.0.29",
-    "@types/react": "^18.0.1",
+    "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.1",
     "@types/react-helmet": "6.1.5",
     "@types/react-tooltip": "^4.2.4",
