--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -153,5 +153,5 @@ jobs:
         with:
           commit-message: "chore: update nfid-frontend build"
           title: "chore: update nfid-frontend build"
-          branch: update-sdk
+          branch: chore/update-nfid-frontend-build
           path: nfid-sdk
