--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^13.3.0",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
+    "@types/react-toastify": "^4.1.0",
     "@xstate/react": "^3.0.0",
     "biguintle": "1.0.3",
     "bip39": "3.0.4",
@@ -65,6 +66,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.0.5",
     "react-scrollspy": "^3.4.3",
+    "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
     "react-verification-code-input": "^1.2.9",
     "rxjs": "^7.5.6",
