--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "bowser": "^2.11.0",
+    "chai-http": "^4.3.0",
     "clsx": "1.1.1",
     "date-fns": "^2.28.0",
     "geckodriver": "^3.0.1",
@@ -118,7 +119,7 @@
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
     "chai": "^4.3.6",
-    "chromedriver": "101.0.0",
+    "chromedriver": "104.0.0",
     "cross-env": "7.0.3",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
@@ -132,8 +133,10 @@
     "eslint-plugin-wdio": "^7.4.2",
     "events": "3.3.0",
     "husky": "7.0.4",
+    "isomorphic-fetch": "3.0.0",
     "jest": "^27.1.5",
     "jest-circus": "^27.1.5",
+    "node-fetch": "3.2.10",
     "npm-run-all": "4.1.5",
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
@@ -149,7 +152,8 @@
     "wdio-geckodriver-service": "^2.1.0",
     "wdio-json-reporter": "^3.0.0",
     "webdriverio": "^7.16.16",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "whatwg-fetch": "3.6.2"
   },
   "eslintConfig": {
     "extends": "react-app",
