Integration getICPBalance [sc-3449]

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/lodash": "^4.14.182",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
     "@xstate/react": "^3.0.0",
@@ -53,6 +54,7 @@
     "immer": "9.0.12",
     "jest-environment-jsdom": "^27.1.5",
     "jotai": "1.6.4",
+    "lodash": "^4.17.21",
     "process": "0.11.10",
     "react": "^18.2.0",
     "react-awesome-reveal": "^3.8.1",
