--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "craco start",
     "eject": "craco eject",
     "format:examples": "prettier --write ./examples/MultipassDemo/src",
+    "format:check": "prettier --check ./src",
     "format": "prettier --write ./src",
     "generate-cucumber-html-report": "ts-node ./test/reporter/index.ts",
     "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
