Integration getICPTxHistory [sc-3451]

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -43,6 +43,8 @@ jobs:
           GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
           CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
+          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
 
   deploy:
     needs: check-secrets
@@ -84,3 +86,5 @@ jobs:
           AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
           GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
