--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,8 @@ jobs:
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
           CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
+          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
 
   deploy:
     needs: check-secrets
@@ -94,6 +96,8 @@ jobs:
           AWS_SIGNIN_GOOGLE: ${{secrets.PROD_AWS_SIGNIN_GOOGLE}}
           GOOGLE_CLIENT_ID: ${{secrets.PROD_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
 
       - name: Create Sentry release
         if: ${{ github.ref == 'refs/heads/main' }}
