--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "craco start",
     "eject": "craco eject",
     "format:examples": "prettier --write ./examples/MultipassDemo/src",
+    "format:check": "prettier --check ./src",
     "format": "prettier --write ./src",
     "generate-cucumber-html-report": "ts-node ./test/reporter/index.ts",
     "generate:js": "../../Dfinity/candid/target/debug/didc bind ../identity-manager/src/identity_manager/identity_manager.did -t js > frontend/generated/identity_manager.js",
@@ -38,6 +39,7 @@
     "@tailwindcss/forms": "^0.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
+    "@types/lodash": "^4.14.182",
     "@types/qrcode": "^1.4.2",
     "@types/react-scrollspy": "^3.3.5",
     "@xstate/react": "^3.0.0",
@@ -52,6 +54,7 @@
     "immer": "9.0.12",
     "jest-environment-jsdom": "^27.1.5",
     "jotai": "1.6.4",
+    "lodash": "^4.17.21",
     "process": "0.11.10",
     "react": "^18.2.0",
     "react-awesome-reveal": "^3.8.1",
@@ -94,7 +97,6 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "^0.0.13",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
-    "@types/chai": "^4.3.1",
     "@types/google-one-tap": "^1.2.0",
     "@types/jest": "^27.1.5",
     "@types/node": "17.0.29",
@@ -117,8 +119,7 @@
     "assert": "2.0.0",
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
-    "chai": "^4.3.6",
-    "chromedriver": "101.0.0",
+    "chromedriver": "104.0.0",
     "cross-env": "7.0.3",
     "cucumber-html-reporter": "^5.5.0",
     "dotenv": "16.0.0",
@@ -149,7 +150,8 @@
     "wdio-geckodriver-service": "^2.1.0",
     "wdio-json-reporter": "^3.0.0",
     "webdriverio": "^7.16.16",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "whatwg-fetch": "3.6.2"
   },
   "eslintConfig": {
     "extends": "react-app",
