--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bip39": "3.0.4",
     "borc": "3.0.0",
     "bowser": "^2.11.0",
+    "browser-crypto": "1.4.0",
     "clsx": "1.1.1",
     "date-fns": "^2.28.0",
     "geckodriver": "^3.0.1",
