feat([sc-1698]): wait for craco

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           yarn
           (yarn dev&)
-          sleep 10s
+          sleep 10
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
