--- a/package.json
+++ b/package.json
@@ -152,7 +152,7 @@
     "wdio-cucumberjs-json-reporter": "^4.4.1",
     "wdio-geckodriver-service": "^2.1.0",
     "wdio-json-reporter": "^3.0.0",
-    "webdriverio": "^7.16.16",
+    "webdriverio": "7.23.0",
     "webpack": "^5.72.0",
     "whatwg-fetch": "3.6.2"
   },
