--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -60,13 +60,9 @@ jobs:
           DFX_IDENTITY_PEM: ${{ secrets.GH_MP_ADMIN_PEM }}
 
       - name: Install dependencies
-        run: yarn install --ignore-engines
-
-      - name: Deploy to local replica
         run: |
-          dfx start --clean --background
-          dfx deploy
-
+          yarn
+          yarn dev
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
