feat([sc-1698]): run yarn in background

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn
-          yarn dev
+          (yarn dev&)
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
