feat([sc-1698]): wait for dev server

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -63,6 +63,7 @@ jobs:
         run: |
           yarn
           (yarn dev&)
+          sleep 10s
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
