feat([sc-1698]): try with serve

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -62,8 +62,8 @@ jobs:
       - name: Install dependencies
         run: |
           yarn
-          (yarn dev&)
-          sleep 10
+          yarn build
+          yarn serve -s build &
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
