--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "postcss": "^8.4.12",
     "prettier": "2.6.2",
     "react-test-renderer": "^18.2.0",
+    "serve": "14.0.1",
     "storybook": "6.5.9",
     "tailwindcss": "3.0.24",
     "ts-jest": "^27.1.5",
