feat([sc-1698]): specify port

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           yarn
           yarn build
-          yarn serve -s build &
+          yarn serve -l 9090 -s build &
         env:
           FRONTEND_MODE: production
           BACKEND_MODE: DEV
