--- a/package.json
+++ b/package.json
@@ -110,15 +110,15 @@
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
-    "@wdio/allure-reporter": "^7.20.0",
-    "@wdio/cli": "^7.19.5",
-    "@wdio/config": "^7.16.16",
-    "@wdio/cucumber-framework": "^7.19.1",
-    "@wdio/local-runner": "^7.19.5",
-    "@wdio/sauce-service": "^7.19.1",
-    "@wdio/selenium-standalone-service": "^7.16.16",
-    "@wdio/spec-reporter": "^7.19.5",
-    "@wdio/static-server-service": "^7.16.14",
+    "@wdio/allure-reporter": "7.23.0",
+    "@wdio/cli": "7.23.0",
+    "@wdio/config": "7.23.0",
+    "@wdio/cucumber-framework": "7.23.0",
+    "@wdio/local-runner": "7.23.0",
+    "@wdio/sauce-service": "7.23.0",
+    "@wdio/selenium-standalone-service": "7.23.0",
+    "@wdio/spec-reporter": "7.23.0",
+    "@wdio/static-server-service": "7.23.0",
     "assert": "2.0.0",
     "autoprefixer": "10.4.4",
     "buffer": "6.0.3",
@@ -149,10 +149,10 @@
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3",
     "util": "0.12.4",
-    "wdio-chromedriver-service": "^7.3.2",
-    "wdio-cucumberjs-json-reporter": "^4.4.1",
-    "wdio-geckodriver-service": "^2.1.0",
-    "wdio-json-reporter": "^3.0.0",
+    "wdio-chromedriver-service": "7.3.2",
+    "wdio-cucumberjs-json-reporter": "4.4.3",
+    "wdio-geckodriver-service": "3.0.3",
+    "wdio-json-reporter": "3.0.0",
     "webdriverio": "7.23.0",
     "webpack": "^5.72.0",
     "whatwg-fetch": "3.6.2"
