--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: E2E Tests CI
+name: Tests CI
 
 on:
   push:
@@ -64,9 +64,10 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Install dependencies
+      - name: Run install, unit tests, build and serve for e2e
         run: |
           yarn
+          yarn test
           yarn build
           yarn serve -l 9090 -s build &
         env:
@@ -95,6 +96,9 @@ jobs:
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
+
+      - name: Running unit tests
+        run: yarn test
 
       - name: Running E2E test
         run: yarn test:e2e
