--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -64,10 +64,9 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Run install, unit tests, build and serve for e2e
+      - name: Run install, build and serve for e2e
         run: |
           yarn
-          yarn test
           yarn build
           yarn serve -l 9090 -s build &
         env:
