E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -32,6 +32,7 @@ jobs:
           IM_ADDITION_CANISTER_ID_DEV: ${{secrets.PROD_CANISTER_ID_IM_ADDITION}}
           AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
           AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
+          URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
           GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
           CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
@@ -76,6 +77,7 @@ jobs:
           INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_INTERNET_IDENTITY}}
           AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
           AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
+          URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
           GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
           LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
