--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -51,6 +51,8 @@ jobs:
           SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
           SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
+          USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
+          PROFILE_DIRECTORY: ${{secrets.PROFILE_DIRECTORY}}
 
   build:
     needs: check-secrets
@@ -65,53 +67,68 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - name: Run install, build and serve for e2e
-        run: |
-          yarn
-          yarn build
-          yarn serve -l 9090 -s build &
-        env:
-          FRONTEND_MODE: production
-          BACKEND_MODE: DEV
-          IS_DEV: true
-          II_MODE: production
-          IC_HOST: https://ic0.app
-          DFX_NETWORK: dev
-          CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
-          IS_E2E_TEST: true
+      # - name: Run install, build and serve for e2e
+      #   run: |
+      #     yarn
+      #     yarn build
+      #     yarn serve -l 9090 -s build &
+      #   env:
+      #     FRONTEND_MODE: production
+      #     BACKEND_MODE: DEV
+      #     IS_DEV: true
+      #     II_MODE: production
+      #     IC_HOST: https://ic0.app
+      #     DFX_NETWORK: dev
+      #     CURRCONV_TOKEN: ${{secrets.CURRCONV_TOKEN}}
+      #     IS_E2E_TEST: true
 
-          REACT_APP_SENTRY_CONNECTION: ${{secrets.DEV_SENTRY_CONNECTION}}
-          IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
-          PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_PUB_SUB_CHANNEL}}
-          VERIFIER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_VERIFIER}}
-          LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
-          CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
-          INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_INTERNET_IDENTITY}}
-          AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
-          AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
-          GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
-          USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
+      #     REACT_APP_SENTRY_CONNECTION: ${{secrets.DEV_SENTRY_CONNECTION}}
+      #     IDENTITY_MANAGER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_IDENTITY_MANAGER}}
+      #     PUB_SUB_CHANNEL_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_PUB_SUB_CHANNEL}}
+      #     VERIFIER_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_VERIFIER}}
+      #     LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
+      #     CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
+      #     INTERNET_IDENTITY_CANISTER_ID_DEV: ${{secrets.DEV_CANISTER_ID_INTERNET_IDENTITY}}
+      #     AWS_VERIFY_PHONENUMBER: ${{secrets.DEV_AWS_VERIFY_PHONENUMBER}}
+      #     AWS_SIGNIN_GOOGLE: ${{secrets.DEV_AWS_SIGNIN_GOOGLE}}
+      #     GOOGLE_CLIENT_ID: ${{secrets.DEV_GOOGLE_CLIENT_ID}}
+      #     USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
 
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
-          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
-          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
-          SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
+      #     SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      #     SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+      #     SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT_NFID }}
+      #     SENTRY_LOG_LEVEL: ${{ secrets.SENTRY_LOG_LEVEL }}
 
-      - name: Running unit tests
-        run: yarn test
+      # - name: Running unit tests
+      #   run: yarn test
 
-      - name: Running E2E test
-        run: yarn test:e2e
-        env:
-          URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
-
-      - name: Generate HTML Report
-        if: always()
-        run: yarn generate-cucumber-html-report
-
-      - name: Final Test Reports
-        uses: actions/upload-artifact@v2
-        if: always()
+      - name: Checkout Google user E2E
+        uses: actions/checkout@v3
         with:
-          name: wdio-report
-          path: test/reporter
+          repository: internet-identity-labs/user-google-e2e
+          path: 'userGoogleE2E'
+        run: |
+          ls -la ~/.config/google-chrome/
+          ls -la '~/.config/google-chrome/Profile 1/'
+          ls -la ./userGoogleE2E/
+
+          rm -rf '~/.config/google-chrome/Profile 1/'
+          cp -r './userGoogleE2E/Profile 1' ~/.config/google-chrome
+
+      # - name: Running E2E test
+      #   run: yarn test:e2e
+      #   env:
+      #     URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
+      #     USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
+      #     PROFILE_DIRECTORY: ${{secrets.PROFILE_DIRECTORY}}
+
+      # - name: Generate HTML Report
+      #   if: always()
+      #   run: yarn generate-cucumber-html-report
+
+      # - name: Final Test Reports
+      #   uses: actions/upload-artifact@v2
+      #   if: always()
+      #   with:
+      #     name: wdio-report
+      #     path: test/reporter
