E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -107,6 +107,8 @@ jobs:
         with:
           repository: internet-identity-labs/user-google-e2e
           path: 'userGoogleE2E'
+
+      - name: Put Google user E2E to Chrome
         run: |
           ls -la ~/.config/google-chrome/
           ls -la '~/.config/google-chrome/Profile 1/'
