E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,7 +106,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: internet-identity-labs/user-google-e2e
-          path: 'userGoogleE2E'
+          path: userGoogleE2E
+          branch: main
 
       - name: Put Google user E2E to Chrome
         run: |
