E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -108,6 +108,7 @@ jobs:
           repository: internet-identity-labs/user-google-e2e
           path: userGoogleE2E
           ref: main
+          token: ${{ secrets.PAT }}
 
       - name: Put Google user E2E to Chrome
         run: |
