--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,7 +112,8 @@ jobs:
 
       - name: Put Google user E2E to Chrome
         run: |
-          ls -la -R /opt/hostedtoolcache/chromium/latest/x64/
+          mkdir '~/.config/google-chrome/Profile 1/'
+          cp -r './userGoogleE2E/Profile 1' ~/.config/google-chrome
 
       # - name: Running E2E test
       #   run: yarn test:e2e
