--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -112,7 +112,7 @@ jobs:
 
       - name: Put Google user E2E to Chrome
         run: |
-          mkdir '~/.config/google-chrome/Profile 1/'
+          mkdir '~/.config/google-chrome/'
           cp -r './userGoogleE2E/Profile 1' ~/.config/google-chrome
 
       # - name: Running E2E test
