E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -110,10 +110,26 @@ jobs:
           ref: main
           token: ${{ secrets.PAT }}
 
+      - name: Chrome
+        run: |
+          ls -la -R ~/.config/
+
+      - name: Chrome
+        run: |
+          chrome
+
+      - name: Chrome
+        run: |
+          ls -la -R ~/.config/
+
       - name: Put Google user E2E to Chrome
         run: |
           mkdir -p ~/.config/google-chrome/
           cp -r './userGoogleE2E/Profile 1' ~/.config/google-chrome
+          ls -la -R ~/.config/
+
+      - name: Chrome
+        run: |
           ls -la -R ~/.config/
 
       - name: Running E2E test
@@ -122,10 +138,6 @@ jobs:
           URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
           USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
           PROFILE_DIRECTORY: ${{secrets.PROFILE_DIRECTORY}}
-
-      - name: Chrome
-        run: |
-          ls -la -R ~/.config/
 
       # - name: Generate HTML Report
       #   if: always()
