E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -116,7 +116,7 @@ jobs:
 
       - name: Chrome
         run: |
-          chrome
+          chrome --headless --disable-gpu --screenshot https://www.chromestatus.com/
 
       - name: Chrome
         run: |
