--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -113,10 +113,10 @@ jobs:
       - name: Chrome
         run: |
           mkdir -p ~/user-google-e2e
-          cp -rf ./user-google-e2e ~/user-google-e2e
+          cp -R ./userGoogleE2E ~/user-google-e2e
 
       - name: Running E2E test
-        run: yarn test:e2e &
+        run: yarn test:e2e
         env:
           URL_AWS_USER_E2E_GOOGLE: ${{secrets.URL_AWS_USER_E2E_GOOGLE}}
           USER_DATA_DIR: ${{secrets.USER_DATA_DIR}}
