E2E Implement integration tests for Google [sc-3946]

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Chrome
         run: |
           mkdir -p ~/user-google-e2e
-          cp -R ./userGoogleE2E ~/user-google-e2e
+          cp -R './userGoogleE2E/Profile 1' ~/user-google-e2e
           ls -la ~/user-google-e2e
 
       # - name: Running E2E test
