--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -106,7 +106,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: internet-identity-labs/user-google-e2e
-          path: userGoogleE2E
+          path: user-google-e2e
           ref: main
           token: ${{ secrets.PAT }}
 
