fix: added symmetic to release-dev

--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -81,3 +81,4 @@ jobs:
           USERGEEK_API_KEY: ${{secrets.PROD_USERGEEK_API_KEY}}
           LEDGER_CANISTER_ID: ${{secrets.LEDGER_CANISTER_ID}}
           CYCLES_MINTER_CANISTER_ID: ${{secrets.CYCLES_MINTER_CANISTER_ID}}
+          AWS_SYMMETRIC: ${{secrets.DEV_AWS_SYMMETRIC}}
