fix([sc-3842]): add browserstack configuration

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Running E2E test
         run: |
           yarn test:e2e
-          yarn test:e2e:mobile
+          # yarn test:e2e:mobile
 
       - name: Generate HTML Report
         if: always()
